processing history and fixes

--- a/src/content/Main/index.html
+++ b/src/content/Main/index.html
@@ -33,6 +33,7 @@
         <button-wrapper>
           <button id="generate-random">Random</button>
           <button id="start">Start</button>
+          <button id="pause-resume" disabled="true">Pause</button>
         </button-wrapper>
       </control-panel>
 
@@ -41,8 +42,7 @@
 
         </taskline>
         <timeline>
-
-
+          
         </timeline>
       </display>
     </container>
